crates/wn-vm/src/snapshots/wn_vm__compiler__tests__compila_closure_con_captura.snap
---
source: crates/wn-vm/src/compiler.rs
expression: chunk.to_string()
---
══ <script> ══
0000     1  Nada
0001     |  Closure                  1  '<pega afuera>'
0004     |  AsignarLocal             0
0006     |  Pop
0007     |  ObtenerLocal             0
0009     |  DefinirGlobal            0  'afuera'
000c     2  RetornarNada
