crates/wn-vm/src/snapshots/wn_vm__compiler__tests__decl_global_simple.snap
---
source: crates/wn-vm/src/compiler.rs
expression: chunk.to_string()
---
══ <script> ══
0000     1  Constante                0  '10'
0003     |  Constante                1  '20'
0006     |  Suma
0007     |  DefinirGlobal            2  'x'
000a     |  RetornarNada
